feat: add agentic runtime modules and docs site